--- a/Simple KE ( OpenNI_CV_GL )/Simple KE ( OpenNI_CV_GL ).vcxproj.filters
+++ b/Simple KE ( OpenNI_CV_GL )/Simple KE ( OpenNI_CV_GL ).vcxproj.filters
@@ -15,30 +15,33 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GlobalUtility.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="OpenNIUtility.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="KinectExplorer.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="OpenNIWrapper.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenNIUtility.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="GlobalUtility.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
+    <ClCompile Include="..\Kinect Explorer\Sources\GlobalUtility.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Kinect Explorer\Sources\OpenCvUtility.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Kinect Explorer\Sources\OpenNiUtility.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="OpenNiProductConfig.xml">
       <Filter>资源文件</Filter>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Kinect Explorer\Sources\GlobalUtility.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Kinect Explorer\Sources\OpenCvUtility.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Kinect Explorer\Sources\OpenNiUtility.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
