Have basically implemented a simple 3D scene for view-dependent projection.

--- a/Simple3DScene/Simple3DScene.vcxproj
+++ b/Simple3DScene/Simple3DScene.vcxproj
@@ -66,10 +66,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Matrix.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="Pos.h" />
+    <ClInclude Include="Quaternion.h" />
     <ClInclude Include="Vec.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
